# eye_on_you

./: .gitignore  README.md  frames_2024-10-03_18.01.14.gv  frames_2024-10-03_18.05.39.gv
arduinosetup/: arduinosetup.ino
install/: local_setup.sh  setup.sh
install/eye_on_you/share/eye_on_you/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  robot.urdf
install/eye_on_you/share/eye_on_you/launch/: simulation.py  twoaxis.py
install/eye_on_you/share/eye_on_you/meshes/: arm.stl  base.stl  home.stl
install/eye_on_you/share/eye_on_you/rviz/: robot_view.rviz
install/eye_on_you/share/eye_on_you/urdf/: robot.urdf
log/: latest_build
src/: setup.cfg  setup.py
src/eye_on_you/: camera_node.py  face_detection.py  face_detection_simulation.py  servo_controller.py  simulation_controller.py
src/launch/: simulation.py
src/meshes/: arm.stl
src/rviz/: robot_view.rviz
